# gst-plugins-bad

./: configure.ac
gst-libs/gst/: Makefile.am
gst-libs/gst/applemedia/: Makefile.am  applemedia.h  coremediabuffer.c  corevideobuffer.c  corevideomemory.c  corevideomemory.h
sys/applemedia/: Makefile.am  avfassetsrc.m  avfvideosrc.m  coremediabuffer.c  corevideobuffer.c  corevideomemory.c  corevideomemory.h  corevideotexturecache.m  plugin.m  qtkitvideosrc.m  vtdec.c  vtenc.c  vtenc.h
tests/check/: Makefile.am
tests/check/elements/: avfvideosrc.c
